// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
<div>
  <p>
    Submitted Value: 
    Juan Almeida
  </p>
</div>
`;

exports[`snapshot empty value 1`] = `
<div>
  <p>
    Submitted Value: 
    
  </p>
</div>
`;
